# wheel-of-fortune

./: .gitignore  Makefile  README.md  board.py  dialogue.py  game.py  game_manager.py  game_state.py  main.py  parsers.py  player_input.py  players.py  pyproject.toml  settings.py  test_zone  ui.py  wheel.py
settings/: characters.txt  prizes.txt
tests/: test_puzzle.py  test_wheel_of_fortune.py
wheel-of-fortune/: .gitignore
wheel-of-fortune/src/wof/: __main__.py  _playground.py  board.py  game_manager.py  game_state.py  main.py  parsers.py  players.py  settings.py  ui.py  wheel.py
wheel-of-fortune/src/wof/data/: bonus_round.csv  characters.csv  scratch.txt  wheel.csv
wheel_of_fortune/: __init__.py  puzzle.py
