[tool.poetry]
name = "wheel-of-fortune"
version = "0.1.0"
description = ""
authors = ["M-110 <mcleancolinm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
mypy = "^0.960"
pylint = "^2.13.9"
yapf = "^0.32.0"
black = "^22.3.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
